--- a/code/Deep Tag Labeler Pre Elmo.ipynb
+++ b/code/Deep Tag Labeler Pre Elmo.ipynb
@@ -1243,7 +1243,8 @@
     "            print('Jaccard {} score: {:,}'.format(\n",
     "                j_type,\n",
     "                jaccard_score(y_test, y_pred_bin, average=j_type)\n",
-    "            ))"
+    "            ))\n",
+    "        print('')"
    ]
   },
   {
