Resolve conflict by removing pyspark_dist_explore

--- a/code/Stack Overflow Sample Data.ipynb
+++ b/code/Stack Overflow Sample Data.ipynb
@@ -104,6 +104,485 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Documents of All Values Per Question\n",
+    "\n",
+    "Combine all documents into something that can be served on a web page."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os, re\n",
+    "from pyspark.sql import SparkSession\n",
+    "from frozendict import frozendict\n",
+    "\n",
+    "spark = SparkSession.builder.appName('Deep Products - Convert XML to Parquet').getOrCreate()\n",
+    "sc = spark.sparkContext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_AcceptedAnswerId</th>\n",
+       "      <th>_AnswerCount</th>\n",
+       "      <th>_Body</th>\n",
+       "      <th>_ClosedDate</th>\n",
+       "      <th>_CommentCount</th>\n",
+       "      <th>_CommunityOwnedDate</th>\n",
+       "      <th>_CreationDate</th>\n",
+       "      <th>_FavoriteCount</th>\n",
+       "      <th>_Id</th>\n",
+       "      <th>_LastActivityDate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>_LastEditorDisplayName</th>\n",
+       "      <th>_LastEditorUserId</th>\n",
+       "      <th>_OwnerDisplayName</th>\n",
+       "      <th>_OwnerUserId</th>\n",
+       "      <th>_ParentId</th>\n",
+       "      <th>_PostTypeId</th>\n",
+       "      <th>_Score</th>\n",
+       "      <th>_Tags</th>\n",
+       "      <th>_Title</th>\n",
+       "      <th>_ViewCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4877</td>\n",
+       "      <td>2</td>\n",
+       "      <td>&lt;p&gt;My dream IDE does full code hints, explains...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2008-08-07T15:12:10.530</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4839</td>\n",
+       "      <td>2013-02-12T11:55:21.800</td>\n",
+       "      <td>...</td>\n",
+       "      <td>mauriciopastrana</td>\n",
+       "      <td>1201415</td>\n",
+       "      <td>None</td>\n",
+       "      <td>547</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>&lt;zend-studio&gt;&lt;code-completion&gt;</td>\n",
+       "      <td>How do I configure eclipse (zend studio 6) to ...</td>\n",
+       "      <td>3275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5224</td>\n",
+       "      <td>5</td>\n",
+       "      <td>&lt;p&gt;What is the Java equivalent of PHP's &lt;code&gt;...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2008-08-07T19:39:31.240</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5222</td>\n",
+       "      <td>2018-04-19T13:12:43.453</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Stu Thompson</td>\n",
+       "      <td>507738</td>\n",
+       "      <td>None</td>\n",
+       "      <td>429</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>51</td>\n",
+       "      <td>&lt;java&gt;&lt;http&gt;&lt;servlets&gt;</td>\n",
+       "      <td>Accessing post variables using Java Servlets</td>\n",
+       "      <td>113478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5462</td>\n",
+       "      <td>8</td>\n",
+       "      <td>&lt;p&gt;The company I work for is wanting to add bl...</td>\n",
+       "      <td>2012-11-16T12:21:26.777</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2008-08-07T23:00:30.053</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5460</td>\n",
+       "      <td>2011-05-05T02:37:41.240</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Kevin Sheffield</td>\n",
+       "      <td>590</td>\n",
+       "      <td>None</td>\n",
+       "      <td>590</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>&lt;community-server&gt;</td>\n",
+       "      <td>Telligent's Community Server</td>\n",
+       "      <td>2432</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   _AcceptedAnswerId  _AnswerCount  \\\n",
+       "0               4877             2   \n",
+       "1               5224             5   \n",
+       "2               5462             8   \n",
+       "\n",
+       "                                               _Body              _ClosedDate  \\\n",
+       "0  <p>My dream IDE does full code hints, explains...                     None   \n",
+       "1  <p>What is the Java equivalent of PHP's <code>...                     None   \n",
+       "2  <p>The company I work for is wanting to add bl...  2012-11-16T12:21:26.777   \n",
+       "\n",
+       "   _CommentCount _CommunityOwnedDate            _CreationDate  _FavoriteCount  \\\n",
+       "0              0                None  2008-08-07T15:12:10.530             NaN   \n",
+       "1              0                None  2008-08-07T19:39:31.240            10.0   \n",
+       "2              0                None  2008-08-07T23:00:30.053             NaN   \n",
+       "\n",
+       "    _Id        _LastActivityDate  ... _LastEditorDisplayName  \\\n",
+       "0  4839  2013-02-12T11:55:21.800  ...       mauriciopastrana   \n",
+       "1  5222  2018-04-19T13:12:43.453  ...           Stu Thompson   \n",
+       "2  5460  2011-05-05T02:37:41.240  ...        Kevin Sheffield   \n",
+       "\n",
+       "  _LastEditorUserId  _OwnerDisplayName _OwnerUserId  _ParentId _PostTypeId  \\\n",
+       "0           1201415               None          547       None           1   \n",
+       "1            507738               None          429       None           1   \n",
+       "2               590               None          590       None           1   \n",
+       "\n",
+       "   _Score                           _Tags  \\\n",
+       "0       7  <zend-studio><code-completion>   \n",
+       "1      51          <java><http><servlets>   \n",
+       "2       4              <community-server>   \n",
+       "\n",
+       "                                              _Title _ViewCount  \n",
+       "0  How do I configure eclipse (zend studio 6) to ...       3275  \n",
+       "1       Accessing post variables using Java Servlets     113478  \n",
+       "2                       Telligent's Community Server       2432  \n",
+       "\n",
+       "[3 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posts_df = spark.read.json('data/stackoverflow/sample/Posts.100K.Questions.jsonl.gz').alias('Posts')\n",
+    "posts_df.limit(3).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_CreationDate</th>\n",
+       "      <th>_Id</th>\n",
+       "      <th>_PostId</th>\n",
+       "      <th>_Score</th>\n",
+       "      <th>_Text</th>\n",
+       "      <th>_UserDisplayName</th>\n",
+       "      <th>_UserId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008-09-07T00:18:11.643</td>\n",
+       "      <td>61</td>\n",
+       "      <td>47960</td>\n",
+       "      <td>2</td>\n",
+       "      <td>You're really going to have to be more specifi...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008-09-07T00:37:17.870</td>\n",
+       "      <td>63</td>\n",
+       "      <td>47960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Have you even used any code snippets?\\nThere i...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008-09-07T23:09:03.410</td>\n",
+       "      <td>193</td>\n",
+       "      <td>47177</td>\n",
+       "      <td>0</td>\n",
+       "      <td>To clarify, the sigar api gets you system info...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>828</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             _CreationDate  _Id  _PostId  _Score  \\\n",
+       "0  2008-09-07T00:18:11.643   61    47960       2   \n",
+       "1  2008-09-07T00:37:17.870   63    47960       0   \n",
+       "2  2008-09-07T23:09:03.410  193    47177       0   \n",
+       "\n",
+       "                                               _Text _UserDisplayName  _UserId  \n",
+       "0  You're really going to have to be more specifi...             None     2658  \n",
+       "1  Have you even used any code snippets?\\nThere i...             None     4035  \n",
+       "2  To clarify, the sigar api gets you system info...             None      828  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments_df = spark.read.json('data/stackoverflow/sample/Comments.100K.Questions.jsonl.gz').alias('Comments')\n",
+    "comments_df.limit(3).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compose into Single Giant Record\n",
+    "\n",
+    "### Add a List of Comments to Posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Posts count: 276,788\n",
+      "Comments count: 435,801\n",
+      "Non null posts count: 276,788\n",
+      "Non null comments count: 435,801\n",
+      "[4839, 4852, 4877, 5222, 5224, 5227, 5460, 5462, 5465, 5492]\n",
+      "[5273, 5273, 5273, 5273, 6515, 6572, 10190, 10194, 10282, 12820]\n",
+      "Post comments count: 3,221\n",
+      "Post comments dict count: 3,221\n",
+      "Combined docs count: 990\n"
+     ]
+    }
+   ],
+   "source": [
+    "from frozendict import frozendict\n",
+    "import json\n",
+    "\n",
+    "print('Posts count: {:,}'.format(posts_df.count()))\n",
+    "print('Comments count: {:,}'.format(comments_df.count()))\n",
+    "\n",
+    "print('Non null posts count: {:,}'.format(posts_df.filter(posts_df._Id.isNotNull()).count()))\n",
+    "print('Non null comments count: {:,}'.format(comments_df.filter(comments_df._PostId.isNotNull()).count()))\n",
+    "\n",
+    "print([x['_Id'] for x in posts_df.orderBy('_Id').take(10)])\n",
+    "print([x['_PostId'] for x in comments_df.orderBy('_PostId').take(10)])\n",
+    "\n",
+    "post_comments = posts_df.join(comments_df, posts_df._Id == comments_df._PostId)\n",
+    "print('Post comments count: {:,}'.format(post_comments.count()))\n",
+    "\n",
+    "comment_columns = [col for col in comments_df.columns]\n",
+    "post_columns = [col for col in posts_df.columns]\n",
+    "\n",
+    "post_comment_dicts = \\\n",
+    "    post_comments.rdd.map(\n",
+    "    lambda t: (\n",
+    "        frozendict({col:t[col] for col in post_columns}), \n",
+    "        [{col:t[col] for col in comment_columns}]\n",
+    "    )\n",
+    ")\n",
+    "print('Post comments dict count: {:,}'.format(post_comment_dicts.count()))\n",
+    "\n",
+    "\n",
+    "def compose_dict(x):\n",
+    "    \"\"\"Compose a final dictionary of a record with the Post fields present and the Comment records under \n",
+    "       the 'Comments' key\"\"\"\n",
+    "    post = dict(x[0])\n",
+    "    comments = sorted(x[1], key=lambda y: y['_CreationDate'])\n",
+    "    post.update({'Comments': comments})\n",
+    "    return post\n",
+    "\n",
+    "combined_docs = post_comment_dicts.reduceByKey(lambda a, b: a + b).map(compose_dict)\n",
+    "print('Combined docs count: {:,}'.format(combined_docs.count()))\n",
+    "\n",
+    "os.system('rm -rf data/stackoverflow/sample/combined/Posts.Comments.jsonl.gz')\n",
+    "combined_docs.map(lambda x: json.dumps(x)).coalesce(1).saveAsTextFile(\n",
+    "    path='data/stackoverflow/sample/combined/Posts.Comments.jsonl.gz',\n",
+    "    compressionCodecClass=\"org.apache.hadoop.io.compress.GzipCodec\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Users and Votes to Posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original docs: 990\n",
+      "981\n",
+      "Step 1 docs: 981\n",
+      "Step 1 docs: 981\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Original docs: {:,}'.format(combined_docs.count()))\n",
+    "print('Docs with _OwnerUserId: {:,}'.format(\n",
+    "    combined_docs.filter(lambda x: '_OwnerUserId' in x and x['_OwnerUserId'] is not None).count())\n",
+    ")\n",
+    "\n",
+    "filtered_docs = combined_docs.filter(lambda x: '_OwnerUserId' in x and x['_OwnerUserId'] is not None)\n",
+    "print('Step 1 docs: {:,}'.format(filtered_docs.count()))\n",
+    "\n",
+    "joinable_docs = filtered_docs.map(lambda x: (x['_OwnerUserId'], x))\\\n",
+    "                             .filter(lambda x: x[0] is not None)\n",
+    "print('Step 2 docs: {:,}'.format(joinable_docs.count()))\n",
+    "\n",
+    "users_df = spark.read.json('data/stackoverflow/sample/Users.100K.Questions.jsonl.gz').rdd\\\n",
+    "                .filter(lambda x: x['_Id'] is not None)\n",
+    "users_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original docs: 981\n"
+     ]
+    }
+   ],
+   "source": [
+    "def choose_list(x):\n",
+    "    if not x or len(x) < 1:\n",
+    "        print(\"E\")\n",
+    "        return []\n",
+    "    return x\n",
+    "\n",
+    "users_docs = joinable_docs.leftOuterJoin(\n",
+    "    users_df.filter(lambda x: '_Id' in x and x['_Id'] is not None).map(lambda x: (x['_Id'], x))\n",
+    ")\n",
+    "print('Original docs: {:,}'.format(users_docs.count()))\n",
+    "users_docs.filter(lambda x: len(x[1][0]) < 1).count()\n",
+    ".filter(\n",
+    "    lambda x: len(x) > 1 and x[0] is not None and len(x[1]) > 0 and len(x[1][0]) > 0 and len(x[1][1]) > 0)\\\n",
+    "  .map(lambda x: ([y for y in x[1][0]][0], choose_list(x[1])))\n",
+    "\n",
+    "users_docs.count()\n",
+    "\n",
+    "def update_owner(x):\n",
+    "    x[0].update({'_Owner': sorted([y for y in x[1]], key=lambda z: z['_OwnerUserId'])})\n",
+    "    return x[0]\n",
+    "\n",
+    "updated_users_docs = users_docs.map(update_owner)\n",
+    "\n",
+    "print(users_docs.count())\n",
+    "users_docs.first()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nest Answer Posts to Question Posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "963731"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "votes_df = spark.read.json('data/stackoverflow/sample/Votes.100K.Questions.jsonl.gz')\n",
+    "joinable_votes = votes_df.rdd.filter(lambda x: '_PostId' in x and x['_PostId'] is not None).map(lambda x: (x['_PostId'], x))\n",
+    "joinable_votes.count()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
