Fixed batch size bug

--- a/code/Deep Tag Labeler.ipynb
+++ b/code/Deep Tag Labeler.ipynb
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -882,68 +882,68 @@
       "<class 'tensorflow.python.data.ops.dataset_ops.DatasetV1Adapter'>\n",
       "<class 'tensorflow.python.distribute.input_lib.DistributedDatasetV1'>\n",
       "<class 'tensorflow.python.distribute.input_lib.DistributedDatasetV1'>\n",
-      "Model: \"model_2\"\n",
+      "Model: \"model_3\"\n",
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_3 (InputLayer)            [(None, 100)]        0                                            \n",
+      "input_4 (InputLayer)            [(None, 100)]        0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 100, 50)      500000      input_3[0][0]                    \n",
+      "embedding_3 (Embedding)         (None, 100, 50)      500000      input_4[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_8 (Conv1D)               (None, 98, 128)      19328       embedding_2[0][0]                \n",
+      "conv1d_12 (Conv1D)              (None, 98, 128)      19328       embedding_3[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_9 (Conv1D)               (None, 97, 128)      25728       embedding_2[0][0]                \n",
+      "conv1d_13 (Conv1D)              (None, 97, 128)      25728       embedding_3[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_10 (Conv1D)              (None, 96, 128)      32128       embedding_2[0][0]                \n",
+      "conv1d_14 (Conv1D)              (None, 96, 128)      32128       embedding_3[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "conv1d_11 (Conv1D)              (None, 95, 128)      38528       embedding_2[0][0]                \n",
+      "conv1d_15 (Conv1D)              (None, 95, 128)      38528       embedding_3[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_10 (BatchNo (None, 98, 128)      512         conv1d_8[0][0]                   \n",
+      "batch_normalization_15 (BatchNo (None, 98, 128)      512         conv1d_12[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_11 (BatchNo (None, 97, 128)      512         conv1d_9[0][0]                   \n",
+      "batch_normalization_16 (BatchNo (None, 97, 128)      512         conv1d_13[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_12 (BatchNo (None, 96, 128)      512         conv1d_10[0][0]                  \n",
+      "batch_normalization_17 (BatchNo (None, 96, 128)      512         conv1d_14[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_13 (BatchNo (None, 95, 128)      512         conv1d_11[0][0]                  \n",
+      "batch_normalization_18 (BatchNo (None, 95, 128)      512         conv1d_15[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_12 (Dropout)            (None, 98, 128)      0           batch_normalization_10[0][0]     \n",
+      "dropout_18 (Dropout)            (None, 98, 128)      0           batch_normalization_15[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_13 (Dropout)            (None, 97, 128)      0           batch_normalization_11[0][0]     \n",
+      "dropout_19 (Dropout)            (None, 97, 128)      0           batch_normalization_16[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_14 (Dropout)            (None, 96, 128)      0           batch_normalization_12[0][0]     \n",
+      "dropout_20 (Dropout)            (None, 96, 128)      0           batch_normalization_17[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_15 (Dropout)            (None, 95, 128)      0           batch_normalization_13[0][0]     \n",
+      "dropout_21 (Dropout)            (None, 95, 128)      0           batch_normalization_18[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "activation_8 (Activation)       (None, 98, 128)      0           dropout_12[0][0]                 \n",
+      "activation_12 (Activation)      (None, 98, 128)      0           dropout_18[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "activation_9 (Activation)       (None, 97, 128)      0           dropout_13[0][0]                 \n",
+      "activation_13 (Activation)      (None, 97, 128)      0           dropout_19[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "activation_10 (Activation)      (None, 96, 128)      0           dropout_14[0][0]                 \n",
+      "activation_14 (Activation)      (None, 96, 128)      0           dropout_20[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "activation_11 (Activation)      (None, 95, 128)      0           dropout_15[0][0]                 \n",
+      "activation_15 (Activation)      (None, 95, 128)      0           dropout_21[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "global_max_pooling1d_8 (GlobalM (None, 128)          0           activation_8[0][0]               \n",
+      "global_max_pooling1d_12 (Global (None, 128)          0           activation_12[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "global_max_pooling1d_9 (GlobalM (None, 128)          0           activation_9[0][0]               \n",
+      "global_max_pooling1d_13 (Global (None, 128)          0           activation_13[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "global_max_pooling1d_10 (Global (None, 128)          0           activation_10[0][0]              \n",
+      "global_max_pooling1d_14 (Global (None, 128)          0           activation_14[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "global_max_pooling1d_11 (Global (None, 128)          0           activation_11[0][0]              \n",
+      "global_max_pooling1d_15 (Global (None, 128)          0           activation_15[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 512)          0           global_max_pooling1d_8[0][0]     \n",
-      "                                                                 global_max_pooling1d_9[0][0]     \n",
-      "                                                                 global_max_pooling1d_10[0][0]    \n",
-      "                                                                 global_max_pooling1d_11[0][0]    \n",
+      "concatenate_3 (Concatenate)     (None, 512)          0           global_max_pooling1d_12[0][0]    \n",
+      "                                                                 global_max_pooling1d_13[0][0]    \n",
+      "                                                                 global_max_pooling1d_14[0][0]    \n",
+      "                                                                 global_max_pooling1d_15[0][0]    \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_16 (Dropout)            (None, 512)          0           concatenate_2[0][0]              \n",
+      "dropout_22 (Dropout)            (None, 512)          0           concatenate_3[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                 (None, 32)           16416       dropout_16[0][0]                 \n",
+      "dense_6 (Dense)                 (None, 32)           16416       dropout_22[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "batch_normalization_14 (BatchNo (None, 32)           128         dense_4[0][0]                    \n",
+      "batch_normalization_19 (BatchNo (None, 32)           128         dense_6[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_17 (Dropout)            (None, 32)           0           batch_normalization_14[0][0]     \n",
+      "dropout_23 (Dropout)            (None, 32)           0           batch_normalization_19[0][0]     \n",
       "__________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                 (None, 24)           792         dropout_17[0][0]                 \n",
+      "dense_7 (Dense)                 (None, 24)           792         dropout_23[0][0]                 \n",
       "==================================================================================================\n",
       "Total params: 635,096\n",
       "Trainable params: 634,008\n",
@@ -959,8 +959,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-2b7d0fc91589>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    236\u001b[0m         \u001b[0mclass_weights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m         \u001b[0msample_weights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 238\u001b[0;31m         \u001b[0mtest_sample_weights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_sample_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    239\u001b[0m     )\n\u001b[1;32m    240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-25-2b7d0fc91589>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, dropout_ratio, learning_rate, optimizer, activation, epochs, class_weights, sample_weights, test_sample_weights, X_train_dist, X_test_dist)\u001b[0m\n\u001b[1;32m    198\u001b[0m             \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m             \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m             \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m         )\n\u001b[1;32m    202\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-26-606f8fe637e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    236\u001b[0m         \u001b[0mclass_weights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m         \u001b[0msample_weights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 238\u001b[0;31m         \u001b[0mtest_sample_weights\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_sample_weights\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    239\u001b[0m     )\n\u001b[1;32m    240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-26-606f8fe637e3>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, dropout_ratio, learning_rate, optimizer, activation, epochs, class_weights, sample_weights, test_sample_weights, X_train_dist, X_test_dist)\u001b[0m\n\u001b[1;32m    198\u001b[0m             \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDIST_BATCH_SIZE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m             \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m             \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m         )\n\u001b[1;32m    202\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[1;32m    641\u001b[0m         \u001b[0mmax_queue_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    642\u001b[0m         \u001b[0mworkers\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 643\u001b[0;31m         use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[1;32m    644\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    645\u001b[0m   def evaluate(self,\n",
       "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.7/site-packages/tensorflow/python/keras/engine/training_distributed.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, model, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, **kwargs)\u001b[0m\n\u001b[1;32m    622\u001b[0m         \u001b[0mvalidation_split\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_split\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    623\u001b[0m         \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 624\u001b[0;31m         epochs=epochs)\n\u001b[0m\u001b[1;32m    625\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mdist_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_distributing_by_cloning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    626\u001b[0m       \u001b[0;32mwith\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_distribution_strategy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscope\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.7/site-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36m_distribution_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, batch_size, validation_split, shuffle, epochs, allow_partial_batch)\u001b[0m\n\u001b[1;32m   2161\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdrop_remainder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdrop_remainder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2162\u001b[0m       \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2163\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataset_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDatasetV2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2164\u001b[0m         training_utils.validate_dataset_input(x, y, sample_weight,\n\u001b[1;32m   2165\u001b[0m                                               validation_split)\n",
@@ -1166,7 +1166,7 @@
     "            class_weight=class_weights,\n",
     "            sample_weight=sample_weights,\n",
     "            epochs=epochs,\n",
-    "            batch_size=BATCH_SIZE,\n",
+    "            batch_size=DIST_BATCH_SIZE,\n",
     "            validation_data=(X_test, y_test),\n",
     "            callbacks=callbacks\n",
     "        )\n",
